fix for overflowing tabs content

--- a/extension/popup/popup.scss
+++ b/extension/popup/popup.scss
@@ -480,7 +480,6 @@ header {
 
 .tab-contents {
     flex: 1;
-    overflow: hidden;
     position: relative;
 }
 
